--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,11 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 #Base de datos
 spring.datasource.url=jdbc:mysql://localhost:3306/proyecto
 spring.datasource.username=root
-spring.datasource.password=proot
+spring.datasource.password=root
 
 #Especicamos Code First
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 #Mostar queries de SQL
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=trueReposiory
+spring.jpa.properties.hibernate.format_sql=true
