--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,9 @@ spring.datasource.username=root
 spring.datasource.password=root
 
 #Especicamos Code First
-spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 #Mostar queries de SQL
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
