--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 #Base de datos
 spring.datasource.url=jdbc:mysql://localhost:3306/proyecto
 spring.datasource.username=root
-spring.datasource.password=Misael#1
+spring.datasource.password=root
 
 #Especicamos Code First
 #spring.jpa.hibernate.ddl-auto=update
