--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.2.0'
 	id 'io.spring.dependency-management' version '1.1.4'
+	id "org.sonarqube" version "4.4.1.3373"
+	id "jacoco"
 }
 
 group = 'org.bedu'
@@ -43,4 +45,41 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+	finalizedBy jacocoTestReport
 }
+jacocoTestReport {
+    reports {
+        xml.required = true
+    }
+	// gradle jacocoTestReport
+}
+
+//Excluye reporte
+// test {
+//   jacoco {
+//     excludes = [
+//       'org.bedu.dto.*',
+//       'org.bedu.model.*',
+//       'org.bedu.mapper.*',
+//       'org.bedu.Application.class'
+//     ]
+//   }
+// }
+
+//esto va dentro de jacocoTestReport
+// afterEvaluate {
+//       classDirectories.setFrom(files(classDirectories.files.collect {
+//             fileTree(dir: it,
+//                 exclude: [
+//                   'org/bedu/dto/**',
+//                   'org/bedu/model/**',
+//                   'org/bedu/mapper/**',
+//                   'org/bedu/Application.class'
+//                 ]
+//             )
+//       }))
+//     }
+
+// tasks.named('sonar') {
+//   dependsOn test
+// }
