--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,5 @@ spring.jpa.properties.hibernate.format_sql=true
 
 logging.level.org.springframework.security=DEBUG
 
+spring.config.activate.on-profile=test
+
