--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/proyecto
 spring.datasource.username=root
 spring.datasource.password=root
 
-#Especicamos Code First
+#Especificamos Code First
 #spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.ddl-auto=create-drop
 #Mostar queries de SQL
