--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.password=root
 #Especificamos Code First
 #spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.ddl-auto=create-drop
-#Mostar queries de SQL
+#Mostrar queries de SQL
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
