--- a/.github/workflows/continuos-integration.yml
+++ b/.github/workflows/continuos-integration.yml
@@ -1,6 +1,6 @@
 name: Proyecto API CI/CD
 
-on: 
+on:
   push:
 
 jobs:
@@ -13,11 +13,13 @@ jobs:
       - name: Instalar Java 17
         uses: actions/setup-java@v4
         with:
-            distribution: temurin
-            java-version: 17
+          distribution: temurin
+          java-version: 17
 
       - name: Configuración de Gradle
         uses: gradle/gradle-build-action@v2
 
       - name: Compilar el proyecto
-        run: gradle build
+        run: 
+          gradle build
+          gradle test
