--- a/.github/workflows/continuos-integration.yml
+++ b/.github/workflows/continuos-integration.yml
@@ -20,4 +20,6 @@ jobs:
         uses: gradle/gradle-build-action@v2
 
       - name: Compilar el proyecto
-        run: gradle build
+        run: |
+          gradle build
+          gradle test
