--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.datasource.url=jdbc:mysql://localhost:3306/proyecto
 spring.datasource.username=root
 spring.datasource.password=root
-
+# spring.datasource.url=jdbc:h2:mem:testdb
 #Especificamos Code First
 #spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.ddl-auto=create-drop
